Revision history for Perl module Crypt::GeneratePassword

0.04 2014-06-12 NEILB
    - Reformatted this file as per CPAN::Changes::Spec

0.03 2003-09-09 JWALT
    - added a custom RNG hook

0.02 2002-09-13 JWALT
    - fixed minor bug causing problems with perl 5.005

0.01 2002-09-03 JWALT
    - initial revision
