@@ -1,0 +1,8 @@
+#!perl
+
+use strict;
+use warnings;
+
+use Test::More 0.88 tests => 1;
+
+require_ok('Crypt::GeneratePassword');
