@@ -2,6 +2,7 @@ Revision history for Perl module Crypt::GeneratePassword
 
 0.04 2014-06-12 NEILB
     - Reformatted this file as per CPAN::Changes::Spec
+    - Moved test.pl to t/01-require.t and simplified it
 
 0.03 2003-09-09 JWALT
     - added a custom RNG hook
